--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-pro-sidebar": "^0.5.0",
     "react-qr-code": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
